--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -10,13 +10,12 @@
     tools:context=".VaamYab">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/searchLayout"
+        android:id="@+id/vamYab_searchLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/relativeLayout3">
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,8 +24,8 @@
             android:text="مبلغ:"
             android:id="@+id/textView23"
             android:layout_alignBottom="@+id/editText5"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignRight="@+id/checkBox2"
+            android:layout_alignEnd="@+id/checkBox2" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -44,7 +43,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="بازپرداخت:"
             android:id="@+id/textView22"
-            android:layout_above="@+id/editText7"
+            android:layout_alignBottom="@+id/editText6"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
@@ -55,8 +54,8 @@
             android:ems="10"
             android:id="@+id/editText6"
             android:layout_below="@+id/editText5"
-            android:layout_alignRight="@+id/editText7"
-            android:layout_alignEnd="@+id/editText7" />
+            android:layout_alignRight="@+id/editText5"
+            android:layout_alignEnd="@+id/editText5" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,8 +74,8 @@
             android:ems="10"
             android:id="@+id/editText7"
             android:layout_below="@+id/editText6"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignRight="@+id/editText6"
+            android:layout_alignEnd="@+id/editText6" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -84,10 +83,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="تعداد ضامن:"
             android:id="@+id/textView25"
-            android:layout_below="@+id/editText7"
+            android:layout_alignTop="@+id/editText11"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="22dp" />
+            android:layout_marginTop="20dp" />
 
         <EditText
             android:layout_width="50dp"
@@ -95,7 +94,7 @@
             android:inputType="numberDecimal"
             android:ems="20"
             android:id="@+id/editText8"
-            android:layout_below="@+id/editText7"
+            android:layout_above="@+id/editText11"
             android:layout_alignRight="@+id/editText7"
             android:layout_alignEnd="@+id/editText7" />
 
@@ -103,33 +102,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="نیاز به سند دارد:"
-            android:id="@+id/textView26"
-            android:layout_marginTop="25dp"
-            android:layout_below="@+id/textView25"
-            android:layout_alignRight="@+id/textView27"
-            android:layout_alignEnd="@+id/textView27" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="نیاز به سپرده گذاری:"
-            android:id="@+id/textView27"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="حداکثر کارمزد:"
             android:id="@+id/textView28"
-            android:layout_marginTop="25dp"
-            android:layout_below="@+id/textView27"
-            android:layout_alignRight="@+id/textView27"
-            android:layout_alignEnd="@+id/textView27" />
+            android:layout_below="@+id/checkBox"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp" />
 
         <EditText
             android:layout_width="50dp"
@@ -137,7 +115,7 @@
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/editText11"
-            android:layout_alignBottom="@+id/textView28"
+            android:layout_below="@+id/textView28"
             android:layout_alignLeft="@+id/editText8"
             android:layout_alignStart="@+id/editText8" />
 
@@ -147,10 +125,9 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="بانک:"
             android:id="@+id/textView29"
-            android:layout_marginTop="21dp"
-            android:layout_below="@+id/editText11"
-            android:layout_alignRight="@+id/textView26"
-            android:layout_alignEnd="@+id/textView26" />
+            android:layout_alignTop="@+id/linearLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -168,27 +145,33 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="نفر"
             android:id="@+id/textView31"
-            android:layout_alignBottom="@+id/editText8"
-            android:layout_toLeftOf="@+id/editText8"
-            android:layout_toStartOf="@+id/editText8" />
+            android:layout_alignTop="@+id/textView25"
+            android:layout_alignRight="@+id/textView32"
+            android:layout_alignEnd="@+id/textView32" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="نیاز به سند دارد"
             android:id="@+id/checkBox"
-            android:layout_alignBottom="@+id/textView26"
-            android:layout_alignLeft="@+id/checkBox2"
-            android:layout_alignStart="@+id/checkBox2" />
+            android:checked="false"
+            android:layout_below="@+id/checkBox2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:textSize="15dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="نیاز به سپرده گذاری دارد"
             android:id="@+id/checkBox2"
-            android:layout_alignBottom="@+id/textView27"
-            android:layout_alignLeft="@+id/textView31"
-            android:layout_alignStart="@+id/textView31" />
+            android:checked="false"
+            android:layout_below="@+id/textView24"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:textSize="15dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -196,34 +179,107 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="درصد"
             android:id="@+id/textView32"
-            android:layout_above="@+id/textView29"
+            android:layout_alignTop="@+id/textView28"
             android:layout_toLeftOf="@+id/editText11"
             android:layout_toStartOf="@+id/editText11" />
 
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="جستجو"
-            android:id="@+id/VamYab_go"
-            android:layout_alignParentBottom="true"
+            android:id="@+id/linearLayout"
+            android:layout_below="@+id/editText11"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_marginTop="20dp"
+            android:layout_toLeftOf="@+id/textView29"
+            android:layout_toStartOf="@+id/textView29">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton3"
+                android:layout_below="@+id/vamYab_searchLayout"
+                android:layout_centerHorizontal="true" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton4" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton5" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton6" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton7" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton8" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton9" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton11" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton12" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton10" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton13" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton14" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/imageButton15" />
+
+        </LinearLayout>
+
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:id="@+id/relativeLayout3"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/VamYab_go">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="600dp"
+            android:layout_below="@+id/VamYab_go"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
@@ -305,5 +361,16 @@
                 android:id="@+id/textView34" />
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="جستجو"
+        android:id="@+id/VamYab_go"
+        android:layout_below="@+id/vamYab_searchLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/vamYab_searchLayout"
+        android:layout_alignEnd="@+id/vamYab_searchLayout" />
 
 </RelativeLayout>
