--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -35,7 +35,9 @@
             android:id="@+id/editText5"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:enabled="false"
+            android:contextClickable="false" />
 
         <TextView
             android:layout_width="wrap_content"
