--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".VaamYab">
+    tools:context=".VaamYabActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -30,13 +30,13 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/editText5"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:enabled="false"
+            android:inputType="none"
+            android:editable="false"
             android:contextClickable="false" />
 
         <TextView
@@ -52,7 +52,8 @@
         <EditText
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="none"
+            android:editable="false"
             android:ems="10"
             android:id="@+id/editText6"
             android:layout_below="@+id/editText5"
@@ -72,7 +73,8 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="none"
+            android:editable="false"
             android:ems="10"
             android:id="@+id/editText7"
             android:layout_below="@+id/editText6"
@@ -93,7 +95,8 @@
         <EditText
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="none"
+            android:editable="false"
             android:ems="20"
             android:id="@+id/editText8"
             android:layout_above="@+id/editText11"
@@ -114,7 +117,8 @@
         <EditText
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="none"
+            android:editable="false"
             android:ems="10"
             android:id="@+id/editText11"
             android:layout_below="@+id/textView28"
