--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -35,97 +35,120 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
         <Button
             android:text="1"
+            android:textColor="#C0C0C0"
             android:id="@+id/n1"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
         <Button
             android:text="2"
+            android:textColor="#C0C0C0"
             android:id="@+id/n2"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/n1"
             />
         <Button
             android:text="3"
+            android:textColor="#C0C0C0"
             android:id="@+id/n3"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/n2"
             />
         <Button
             android:text="4"
+            android:textColor="#C0C0C0"
             android:id="@+id/n4"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/n1"
             />
         <Button
             android:text="5"
+            android:textColor="#C0C0C0"
             android:id="@+id/n5"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n4"
             android:layout_below="@id/n1"
+            android:layout_toRightOf="@id/n1"
             />
         <Button
             android:text="6"
+            android:textColor="#C0C0C0"
             android:id="@+id/n6"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n5"
             android:layout_below="@id/n1"
+            android:layout_toRightOf="@id/n2"
             />
         <Button
             android:text="7"
+            android:textColor="#C0C0C0"
             android:id="@+id/n7"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/n4"
             />
         <Button
             android:text="8"
+            android:textColor="#C0C0C0"
             android:id="@+id/n8"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n4"
-            android:layout_below="@id/n5"
+            android:layout_below="@id/n4"
+            android:layout_toRightOf="@id/n1"
             />
         <Button
             android:text="9"
+            android:textColor="#C0C0C0"
             android:id="@+id/n9"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n5"
-            android:layout_below="@id/n6"
+            android:layout_below="@id/n4"
+            android:layout_toRightOf="@id/n2"
             />
         <Button
             android:text="0"
+            android:textColor="#C0C0C0"
             android:id="@+id/n0"
+            android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/n7"
             />
         <Button
             android:text="Del"
+            android:textColor="#C0C0C0"
             android:id="@+id/del"
+            android:background="#B22222"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n4"
             android:layout_below="@id/n7"
+            android:layout_toRightOf="@id/n1"
             />
         <Button
             android:text="Done"
+            android:textColor="#C0C0C0"
             android:id="@+id/done"
+            android:background="#87A96B"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n5"
             android:layout_below="@id/n7"
+            android:layout_toRightOf="@id/n2"
             />
     </RelativeLayout>
 
