--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -35,8 +35,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_below="@+id/textView44"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true">
         <Button
             android:text="1"
             android:textColor="#C0C0C0"
@@ -121,15 +125,7 @@
             android:layout_below="@id/n4"
             android:layout_toRightOf="@id/n2"
             />
-        <Button
-            android:text="0"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n0"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/n7"
-            />
+
         <Button
             android:text="Del"
             android:textColor="#C0C0C0"
@@ -137,9 +133,9 @@
             android:background="#B22222"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/n7"
-            android:layout_toRightOf="@id/n1"
-            />
+            android:layout_alignTop="@+id/done"
+            android:layout_toLeftOf="@+id/done"
+            android:layout_toStartOf="@+id/done" />
         <Button
             android:text="Done"
             android:textColor="#C0C0C0"
@@ -147,9 +143,20 @@
             android:background="#87A96B"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/n7"
-            android:layout_toRightOf="@id/n2"
-            />
+            android:layout_below="@+id/n8"
+            android:layout_toRightOf="@+id/n8"
+            android:layout_toEndOf="@+id/n8" />
+
+        <Button
+            android:text="0"
+            android:textColor="#C0C0C0"
+            android:id="@+id/n0"
+            android:background="#5F9EA0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/del"
+            android:layout_toLeftOf="@+id/del"
+            android:layout_toStartOf="@+id/del" />
     </RelativeLayout>
 
 </RelativeLayout>
