--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -41,6 +41,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout5"
+            android:layout_above="@+id/linearLayout4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
         <Button
             android:text="1"
             android:textColor="#C0C0C0"
@@ -48,6 +58,8 @@
             android:background="#5F9EA0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
             />
         <Button
             android:text="2"
@@ -57,6 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/n1"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
             />
         <Button
             android:text="3"
@@ -66,7 +80,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/n2"
-            />
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            /></LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout4"
+            android:layout_above="@+id/linearLayout3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
         <Button
             android:text="4"
             android:textColor="#C0C0C0"
@@ -75,6 +101,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/n1"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
             />
         <Button
             android:text="5"
@@ -85,6 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/n1"
             android:layout_toRightOf="@id/n1"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
             />
         <Button
             android:text="6"
@@ -95,8 +125,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/n1"
             android:layout_toRightOf="@id/n2"
-            />
-
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            /></LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -109,7 +140,7 @@
             android:layout_alignParentStart="true">
 
             <Button
-                android:text="Done"
+                android:text="!تأیید"
                 android:textColor="#C0C0C0"
                 android:id="@+id/done"
                 android:background="#87A96B"
@@ -122,7 +153,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="Del"
+                android:text="پاک کن!"
                 android:textColor="#C0C0C0"
                 android:id="@+id/del"
                 android:background="#B22222"
@@ -151,6 +182,7 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/linearLayout3"
             android:layout_above="@+id/linearLayout2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
