--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -140,7 +140,7 @@
             android:layout_alignParentStart="true">
 
             <Button
-                android:text="!تأیید"
+                android:text="تأیید!"
                 android:textColor="#C0C0C0"
                 android:id="@+id/done"
                 android:background="#87A96B"
@@ -153,7 +153,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="پاک کن!"
+                android:text="پاک کردن"
                 android:textColor="#C0C0C0"
                 android:id="@+id/del"
                 android:background="#B22222"
