--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -3,227 +3,239 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.vamyab24.EnteringNumber">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="عدد بده !"
-        android:id="@+id/textView44"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="39dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/linearLayout6">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="none"
-        android:editable="false"
-        android:ems="10"
-        android:id="@+id/editText9"
-        android:layout_alignBottom="@+id/textView44"
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            android:editable="false"
+            android:ems="10"
+            android:id="@+id/editText9"
+            android:layout_weight="1"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="عدد بده !"
+            android:id="@+id/textView44"
+            android:textSize="20dp"
+            android:textColor="@android:color/background_dark"
+            android:layout_weight="1"
+            android:gravity="center" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linearLayout6"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@+id/textView44"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true">
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout5"
-            android:layout_above="@+id/linearLayout4"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
-        <Button
-            android:text="1"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n1"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            />
-        <Button
-            android:text="2"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n2"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n1"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            />
-        <Button
-            android:text="3"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n3"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/n2"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            /></LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout4"
-            android:layout_above="@+id/linearLayout3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
-        <Button
-            android:text="4"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n4"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/n1"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            />
-        <Button
-            android:text="5"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n5"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/n1"
-            android:layout_toRightOf="@id/n1"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            />
-        <Button
-            android:text="6"
-            android:textColor="#C0C0C0"
-            android:id="@+id/n6"
-            android:background="#5F9EA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/n1"
-            android:layout_toRightOf="@id/n2"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            /></LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/linearLayout2"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-            <Button
-                android:text="تأیید!"
-                android:textColor="#C0C0C0"
-                android:id="@+id/done"
-                android:background="#87A96B"
-                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/n8"
-                android:layout_toRightOf="@+id/n8"
-                android:layout_toEndOf="@+id/n8"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1" />
-
+                android:id="@+id/linearLayout5"
+                android:layout_above="@+id/linearLayout4"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+            android:layout_weight="1">
             <Button
-                android:text="پاک کردن"
-                android:textColor="#C0C0C0"
-                android:id="@+id/del"
-                android:background="#B22222"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/done"
-                android:layout_toLeftOf="@+id/done"
-                android:layout_toStartOf="@+id/done"
-                android:layout_weight="1" />
-
-            <Button
-                android:text="0"
-                android:textColor="#C0C0C0"
-                android:id="@+id/n0"
+                android:text="1"
+                android:textColor="#ffffff"
+                android:id="@+id/n1"
                 android:background="#5F9EA0"
                 android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" />
+            <Button
+                android:text="2"
+                android:textColor="#ffffff"
+                android:id="@+id/n2"
+                android:background="#5F9EA0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/n1"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" />
+            <Button
+                android:text="3"
+                android:textColor="#ffffff"
+                android:id="@+id/n3"
+                android:background="#5F9EA0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/n2"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" /></LinearLayout>
+
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/del"
-                android:layout_toLeftOf="@+id/del"
-                android:layout_toStartOf="@+id/del"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1" />
-        </LinearLayout>
+                android:id="@+id/linearLayout4"
+                android:layout_above="@+id/linearLayout3"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+            android:layout_weight="1">
+            <Button
+                android:text="4"
+                android:textColor="#ffffff"
+                android:id="@+id/n4"
+                android:background="#5F9EA0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@id/n1"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" />
+            <Button
+                android:text="5"
+                android:textColor="#ffffff"
+                android:id="@+id/n5"
+                android:background="#5F9EA0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@id/n1"
+                android:layout_toRightOf="@id/n1"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" />
+            <Button
+                android:text="6"
+                android:textColor="#ffffff"
+                android:id="@+id/n6"
+                android:background="#5F9EA0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@id/n1"
+                android:layout_toRightOf="@id/n2"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textSize="20dp" /></LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout3"
             android:layout_above="@+id/linearLayout2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1">
 
             <Button
                 android:text="7"
-                android:textColor="#C0C0C0"
+                android:textColor="#ffffff"
                 android:id="@+id/n7"
                 android:background="#5F9EA0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/n4"
                 android:layout_gravity="bottom"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textSize="20dp" />
 
             <Button
                 android:text="8"
-                android:textColor="#C0C0C0"
+                android:textColor="#ffffff"
                 android:id="@+id/n8"
                 android:background="#5F9EA0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/n4"
                 android:layout_toRightOf="@id/n1"
                 android:layout_gravity="bottom"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textSize="20dp" />
 
             <Button
                 android:text="9"
-                android:textColor="#C0C0C0"
+                android:textColor="#ffffff"
                 android:id="@+id/n9"
                 android:background="#5F9EA0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/n4"
                 android:layout_toRightOf="@id/n2"
                 android:layout_gravity="bottom"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textSize="20dp" />
         </LinearLayout>
-    </RelativeLayout>
 
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/linearLayout2"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+            android:layout_weight="1">
+
+                <Button
+                    android:text="تأیید!"
+                    android:textColor="#ffffff"
+                    android:id="@+id/done"
+                    android:background="#87A96B"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/n8"
+                    android:layout_toRightOf="@+id/n8"
+                    android:layout_toEndOf="@+id/n8"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:text="پاک کردن"
+                    android:textColor="#ffffff"
+                    android:id="@+id/del"
+                    android:background="#B22222"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignTop="@+id/done"
+                    android:layout_toLeftOf="@+id/done"
+                    android:layout_toStartOf="@+id/done"
+                    android:layout_weight="1"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:text="0"
+                    android:textColor="#ffffff"
+                    android:id="@+id/n0"
+                    android:background="#5F9EA0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignTop="@+id/del"
+                    android:layout_toLeftOf="@+id/del"
+                    android:layout_toStartOf="@+id/del"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textSize="20dp" />
+            </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
