--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#048583"
     tools:context=".VaamYabActivity">
 
     <RelativeLayout
@@ -50,7 +51,7 @@
             android:layout_alignParentEnd="true" />
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:inputType="none"
             android:editable="false"
