--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -379,8 +379,10 @@
                     android:layout_toLeftOf="@+id/Tozihat"/>
 
                 <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="90dp"
+                    android:layout_width="80dp"
+                    android:layout_height="60dp"
+                    android:paddingLeft="-20dp"
+                    android:paddingTop="-15dp"
                     android:id="@+id/imageView"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
